Entry: fix css overflow Readme updated

--- a/styles/Entry.module.scss
+++ b/styles/Entry.module.scss
@@ -20,6 +20,7 @@
 	flex: 1;
 	display: flex;
 	flex-direction: column;
+	overflow: auto;
 }
 
 .containerEntryToolbar {
@@ -68,7 +69,6 @@
 	resize: none;
 	margin-top: 3px;
 	padding: 0 1rem;
-	overflow: auto;
 	font-family: inherit;
 	font-size: inherit;
 	line-height: 24px;
@@ -107,7 +107,6 @@
 .paragraph {
 	height: 100%;
 	white-space: pre-wrap;
-	overflow: auto;
 	line-height: 24px;
 	padding: 0rem 1rem;
     margin-top: 3px;
